@@ -3,6 +3,7 @@ Changes for 3.2.7rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-11277] fixed update in mass update form when inventory mode is not set explicitly (gcalenko)
 ..F....... [ZBX-12182] fixed missed page number in problems export (miks)
 ..F....... [ZBX-11309] fixed unchecked checkboxes after deleting script, mediatype or proxy (miks)
 ..F....... [ZBX-10999] fixed user's access level to display popup content (miks)
